--- a/css/styles.scss
+++ b/css/styles.scss
@@ -12,6 +12,9 @@ $fontColorTwo: #006600;
 $fontColorThree: #ff0000;
 $fontColorFour: #660033;
 $fontColorFivePlus: #4d004d;
+$mimeBackgroundColor: #b30000;
+$mimeImage: "../img/mime_face.png";
+$flagImage: "../img/red_flag.png";
 
 // Flag/Time display variables:
 $appBlack: #0d0d0d;
@@ -26,6 +29,13 @@ $appBlack: #0d0d0d;
 @mixin inline-flex-column {
     display: inline-flex;
     flex-direction: column;
+}
+
+// Mixin for common centering of mime/flag images:
+@mixin image-center {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 70% 80%;
 }
 
 body {
@@ -68,9 +78,14 @@ h1 {
 
 .new-game-button {
     @include main-theme;
+    cursor: pointer;
     display: block;
     height: 3rem;
     width: 3rem;
+}
+
+.new-game-button:active {
+    border-style: inset;
 }
 
 .tile-container {
@@ -101,6 +116,17 @@ h1 {
 
 .tile-clicked {
     border-style: inset;
+}
+
+.tile-clicked-mime {
+    @include image-center;
+    background-image: url($mimeImage);
+    background-color: $mimeBackgroundColor;
+}
+
+.tile-flagged {
+    @include image-center;
+    background-image: url($flagImage);    
 }
 
 .one {
