--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,13 @@ h1 {
 .display {
   background-color: #0d0d0d;
   border: 3px inset #bfbfbf;
+  color: #b30000;
+  font-family: "Major Mono Display", monospace;
+  font-size: 2.5rem;
   height: 3rem;
+  letter-spacing: -0.7rem;
+  padding: 0.5rem;
+  text-align: center;
   width: 5rem;
 }
 
