--- a/css/styles.scss
+++ b/css/styles.scss
@@ -18,6 +18,7 @@ $flagImage: "../img/red_flag.png";
 
 // Flag/Time display variables:
 $appBlack: #0d0d0d;
+$displayFont: 'Major Mono Display', monospace;
 
 //Mixin for main game container elements:
 @mixin main-theme {
@@ -72,7 +73,13 @@ h1 {
 .display {
     background-color: $appBlack;
     border: 3px inset $tileBorderColor;
+    color: $mimeBackgroundColor;
+    font-family: $displayFont;
+    font-size: 2.5rem;
     height: 3rem;
+    letter-spacing: -0.7rem;
+    padding: 0.5rem;
+    text-align: center;
     width: 5rem;
 }
 
