--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
-  background-color: bisque;
+  background-image: url(../img/backgr.jpg);
+  background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -61,7 +62,7 @@ h1 {
   border: 3px inset #9b9b9b;
   color: #b30000;
   font-family: "Major Mono Display", monospace;
-  font-size: 2.5rem;
+  font-size: 2.25rem;
   height: 3rem;
   letter-spacing: -0.7rem;
   padding: 0.5rem;
