--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 h1 {
-  color: #19456b;
+  color: #0c2c47;
   font-family: "Fredoka One", cursive;
   font-size: 2.5rem;
   letter-spacing: 0.5rem;
@@ -35,7 +35,9 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 1.75rem;
+  -webkit-box-shadow: 2px 2px 10px #1e2b1d;
+          box-shadow: 2px 2px 10px #1e2b1d;
+  margin-top: 1.25rem;
 }
 
 .top-container {
@@ -83,6 +85,31 @@ h1 {
   border-style: inset;
 }
 
+.difficulty-button {
+  background-color: #6d6d6d;
+  border: 0.16rem outset #9b9b9b;
+  cursor: pointer;
+  color: #0c2c47;
+  display: block;
+  -webkit-box-flex: 1;
+      -ms-flex: auto;
+          flex: auto;
+  font-family: "Press Start 2P", arial;
+  font-size: 0.7rem;
+  height: 3rem;
+  width: 5rem;
+  -webkit-transition: color 0.5s ease-out;
+  transition: color 0.5s ease-out;
+}
+
+.difficulty-button:active {
+  border-style: inset;
+}
+
+.difficulty-button:hover {
+  color: #bbbfca;
+}
+
 .tile-container {
   background-color: #6d6d6d;
   border: 0.16rem outset #9b9b9b;
@@ -119,6 +146,8 @@ h1 {
   height: 1.25rem;
   line-height: 1.25rem;
   text-align: center;
+  -webkit-transition: background-color 0.25s ease-out;
+  transition: background-color 0.25s ease-out;
   width: 1.25rem;
 }
 
@@ -126,6 +155,10 @@ h1 {
   display: inline-block;
   vertical-align: middle;
   line-height: normal;
+}
+
+.tile-unclicked:hover {
+  background-color: #9b9b9b;
 }
 
 .tile-clicked {
