--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   height: 100%;
-  padding-top: 5vh;
+  padding-top: 2.5vh;
 }
 
 h1 {
@@ -20,6 +20,7 @@ h1 {
   font-family: "Fredoka One", cursive;
   font-size: 2.5rem;
   letter-spacing: 0.5rem;
+  text-shadow: 4px 4px 7.5px #1e2b1d;
 }
 
 .main-container {
@@ -35,8 +36,8 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: 2px 2px 10px #1e2b1d;
-          box-shadow: 2px 2px 10px #1e2b1d;
+  -webkit-box-shadow: 5px 5px 14px #1e2b1d;
+          box-shadow: 5px 5px 14px #1e2b1d;
   margin-top: 1.25rem;
 }
 
@@ -75,6 +76,12 @@ h1 {
 .new-game-button {
   background-color: #6d6d6d;
   border: 0.16rem outset #9b9b9b;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 70% 80%;
+  background-image: url("../img/default.png");
+  background-size: 90% 90%;
+  border-width: 0.3rem;
   cursor: pointer;
   display: block;
   height: 3rem;
@@ -85,9 +92,18 @@ h1 {
   border-style: inset;
 }
 
+.new-game-button-tense {
+  background-image: url("../img/tense.png");
+}
+
+.new-game-button-lost {
+  background-image: url("../img/loser.png");
+}
+
 .difficulty-button {
   background-color: #6d6d6d;
   border: 0.16rem outset #9b9b9b;
+  border-width: 0.3rem;
   cursor: pointer;
   color: #0c2c47;
   display: block;
@@ -97,9 +113,10 @@ h1 {
   font-family: "Press Start 2P", arial;
   font-size: 0.7rem;
   height: 3rem;
-  width: 5rem;
+  text-align: center;
   -webkit-transition: color 0.5s ease-out;
   transition: color 0.5s ease-out;
+  width: 5rem;
 }
 
 .difficulty-button:active {
@@ -164,6 +181,7 @@ h1 {
 .tile-clicked {
   background-color: #b9b9b9;
   border-style: inset;
+  border-color: #b9b9b9;
 }
 
 .tile-clicked-mime {
