--- a/css/styles.scss
+++ b/css/styles.scss
@@ -247,6 +247,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    padding-top: 1rem;
     span {
         color: $mainFontColor;
         font-family: $buttonFont;
