--- a/css/styles.scss
+++ b/css/styles.scss
@@ -2,7 +2,7 @@
 $backgroundImage: "../img/backgr.jpg";
 $mainFont: 'Fredoka One', cursive;
 $mainFontColor: #0c2c47;
-$shadowColor: rgb(30, 43, 29);
+$shadowColor: #1e2b1d;
 $gameWonOverlayColor: rgba(17, 18, 31, 0.7);
 
 // Tile and container variables:
@@ -83,7 +83,6 @@ h1 {
 
 .top-container {
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     background-color: $tileColor;
@@ -113,23 +112,19 @@ h1 {
     cursor: pointer;
     display: block;
     height: $newGameButtonHeight;
-    width: $newGameButtonWidth
-}
-
-.new-game-button:active {
-    border-style: inset;
-}
-
-.new-game-button-tense {
-    background-image: url($newGameButtonPicTense);
-}
-
-.new-game-button-lost {
-    background-image: url($newGameButtonPicLost);
-}
-
-.new-game-button-won {
-    background-image: url($newGameButtonPicWon);
+    width: $newGameButtonWidth;    
+    &:active {
+        border-style: inset;
+    }
+    &-tense {
+        background-image: url($newGameButtonPicTense);
+    }
+    &-lost {
+        background-image: url($newGameButtonPicLost);
+    }
+    &-won {
+        background-image: url($newGameButtonPicWon);
+    }
 }
 
 .difficulty-button {
@@ -145,14 +140,12 @@ h1 {
     text-align: center;
     transition: color 0.5s ease-out;
     width: $difficultyButtonWidth;
-}
-
-.difficulty-button:active {
-    border-style: inset;
-}
-
-.difficulty-button:hover {
-    color: $buttonFontHighlightColor;
+    &:active {
+        border-style: inset;
+    }
+    &:hover {
+        color: $buttonFontHighlightColor;
+    }
 }
 
 .tile-container {
@@ -180,10 +173,9 @@ h1 {
         vertical-align: middle;
         line-height: normal;
       }
-}
-
-.tile-unclicked:hover {
-    background-color: $tileBorderColor;
+    &:hover{
+        background-color: $tileBorderColor;
+    }
 }
 
 .tile-clicked {
@@ -233,10 +225,9 @@ h1 {
     left: 0;
     align-items: center;
     justify-content: center;
-}
-
-.game-won-overlay-closed {
-    display: none;
+    &-closed {
+        display: none;
+    }
 }
 
 .game-won-popup {
@@ -254,8 +245,9 @@ h1 {
     }
     button {
         flex-grow:0;
-    }
-    #final-time {
-        font-size: 2rem;
-    }
+    }    
+}
+
+.final-time {
+    font-size: 2rem;
 }
