--- a/css/styles.css
+++ b/css/styles.css
@@ -161,17 +161,13 @@ h1 {
   border: 0.16rem outset #9b9b9b;
   font-family: "Press Start 2P", arial;
   height: 1.25rem;
-  line-height: 1.25rem;
   text-align: center;
   -webkit-transition: background-color 0.25s ease-out;
   transition: background-color 0.25s ease-out;
   width: 1.25rem;
-}
-
-.tile-unclicked span {
-  display: inline-block;
-  vertical-align: middle;
-  line-height: normal;
+  line-height: 1.25;
+  padding-top: 0.1rem;
+  padding-left: 0.1rem;
 }
 
 .tile-unclicked:hover {
