--- a/css/styles.scss
+++ b/css/styles.scss
@@ -164,15 +164,12 @@ h1 {
     @include main-theme;
     font-family: $tileFont;
     height: 1.25rem;
-    line-height: 1.25rem;
     text-align: center;
     transition: background-color 0.25s ease-out;
-    width: 1.25rem; 
-    span {
-        display: inline-block;
-        vertical-align: middle;
-        line-height: normal;
-      }
+    width: 1.25rem;
+    line-height: 1.25;
+    padding-top: 0.1rem; 
+    padding-left: 0.1rem;     
     &:hover{
         background-color: $tileBorderColor;
     }
