--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ h1 {
   margin-top: 1.25rem;
 }
 
-.main-container__top {
+.top-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -56,7 +56,7 @@ h1 {
   width: 95%;
 }
 
-.main-container__top__display {
+.top-container__display {
   background-color: #0d0d0d;
   border: 3px inset #9b9b9b;
   color: #b30000;
@@ -69,7 +69,7 @@ h1 {
   width: 5rem;
 }
 
-.main-container__top__new-game-button {
+.new-game-button {
   background-color: #6d6d6d;
   border: 0.16rem outset #9b9b9b;
   background-position: center;
@@ -84,23 +84,23 @@ h1 {
   width: 3rem;
 }
 
-.main-container__top__new-game-button:active {
+.new-game-button:active {
   border-style: inset;
 }
 
-.main-container__top__new-game-button-tense {
+.new-game-button--tense {
   background-image: url("../img/tense.png");
 }
 
-.main-container__top__new-game-button-lost {
+.new-game-button--lost {
   background-image: url("../img/loser.png");
 }
 
-.main-container__top__new-game-button-won {
+.new-game-button--won {
   background-image: url("../img/victor.png");
 }
 
-.main-container__top__difficulty-button {
+.difficulty-button {
   background-color: #6d6d6d;
   border: 0.16rem outset #9b9b9b;
   border-width: 0.3rem;
@@ -119,15 +119,15 @@ h1 {
   width: 5rem;
 }
 
-.main-container__top__difficulty-button:active {
+.difficulty-button:active {
   border-style: inset;
 }
 
-.main-container__top__difficulty-button:hover {
+.difficulty-button:hover {
   color: #bbbfca;
 }
 
-.main-container__tile-container {
+.tile-container {
   background-color: #6d6d6d;
   border: 0.16rem outset #9b9b9b;
   display: -webkit-inline-box;
@@ -143,7 +143,7 @@ h1 {
   max-width: 60vw;
 }
 
-.main-container__tile-container__tile-row {
+.tile-row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -156,7 +156,7 @@ h1 {
           flex-direction: row;
 }
 
-.main-container__tile-container__tile-row__tile--unclicked {
+.tile--unclicked {
   background-color: #6d6d6d;
   border: 0.16rem outset #9b9b9b;
   font-family: "Press Start 2P", arial;
@@ -170,17 +170,17 @@ h1 {
   padding-left: 0.1rem;
 }
 
-.main-container__tile-container__tile-row__tile--unclicked:hover {
+.tile--unclicked:hover {
   background-color: #9b9b9b;
 }
 
-.main-container__tile-container__tile-row__tile--clicked {
+.tile--clicked {
   background-color: #b9b9b9;
   border-style: inset;
   border-color: #b9b9b9;
 }
 
-.main-container__tile-container__tile-row__tile--clicked--mime {
+.tile--mime {
   background-position: center;
   background-repeat: no-repeat;
   background-size: 70% 80%;
@@ -188,30 +188,30 @@ h1 {
   background-color: #b30000;
 }
 
-.main-container__tile-container__tile-row__tile--flagged {
+.tile--flagged {
   background-position: center;
   background-repeat: no-repeat;
   background-size: 70% 80%;
   background-image: url("../img/red_flag.png");
 }
 
-.main-container__tile-container__tile-row__tile--one {
+.tile--one {
   color: #3399ff;
 }
 
-.main-container__tile-container__tile-row__tile--two {
+.tile--two {
   color: #006600;
 }
 
-.main-container__tile-container__tile-row__tile--three {
+.tile--three {
   color: #ff0000;
 }
 
-.main-container__tile-container__tile-row__tile--four {
+.tile--four {
   color: #660033;
 }
 
-.main-container__tile-container__tile-row__tile--five-plus {
+.tile--five-plus {
   color: #4d004d;
 }
 
@@ -233,11 +233,11 @@ h1 {
           justify-content: center;
 }
 
-.game-won-overlay-closed {
+.game-won-overlay--closed {
   display: none;
 }
 
-.game-won-overlay__game-won-popup {
+.game-won-popup {
   background-color: #6d6d6d;
   border: 0.16rem outset #9b9b9b;
   display: -webkit-box;
@@ -257,18 +257,18 @@ h1 {
   padding-top: 1rem;
 }
 
-.game-won-overlay__game-won-popup span {
+.game-won-popup span {
   color: #0c2c47;
   font-family: "Press Start 2P", arial;
 }
 
-.game-won-overlay__game-won-popup button {
+.game-won-popup button {
   -webkit-box-flex: 0;
       -ms-flex-positive: 0;
           flex-grow: 0;
 }
 
-.game-won-overlay__game-won-popup__final-time {
+.game-won-popup__final-time {
   font-size: 2rem;
 }
 /*# sourceMappingURL=styles.css.map */
